--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="assets/images/Advertisements/Advertisement2_mockup-min.png" alt="Cover Page" loading="lazy">
+                  <img src="assets/images/Advertisements/Advertisement2_mockup.png" alt="Cover Page" loading="lazy">
                 </figure>
                 <p class="project-category">Advertisement Design</p>
               </a>
@@ -691,7 +691,7 @@
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="assets/images/menu and broucher/menufront_back-min.png" alt="Cover Page" loading="lazy">
+                  <img src="assets/images/menu and broucher/menufront_back.png" alt="Cover Page" loading="lazy">
                 </figure>
                 <p class="project-category">Brochure front</p>
               </a>
@@ -703,7 +703,7 @@
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="assets/images/menu and broucher/menuleft_right-min.png" alt="Cover Page" loading="lazy">
+                  <img src="assets/images/menu and broucher/menuleft_right.png" alt="Cover Page" loading="lazy">
                 </figure>
                 <p class="project-category">Brochure back</p>
               </a>
@@ -715,7 +715,7 @@
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="assets/images/menu and broucher/MOCKIUP-min.png" alt="Cover Page" loading="lazy">
+                  <img src="assets/images/menu and broucher/MOCKIUP.png" alt="Cover Page" loading="lazy">
                 </figure>
                 <p class="project-category">Brochure Mockup</p>
               </a>
@@ -727,7 +727,7 @@
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="assets/images/menu and broucher/broucher 1 FRONT-min.png" alt="Cover Page" loading="lazy">
+                  <img src="assets/images/menu and broucher/broucher 1 FRONT.png" alt="Cover Page" loading="lazy">
                 </figure>
                 <p class="project-category">Brochure front</p>
               </a>
@@ -739,7 +739,7 @@
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="assets/images/menu and broucher/broucher 1 BACK-min.png" alt="Cover Page" loading="lazy">
+                  <img src="assets/images/menu and broucher/broucher 1 BACK.png" alt="Cover Page" loading="lazy">
                 </figure>
                 <p class="project-category">Brochure back</p>
               </a>
@@ -751,7 +751,7 @@
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="assets/images/menu and broucher/BROUCHER_1_mockup-min.png" alt="Cover Page" loading="lazy">
+                  <img src="assets/images/menu and broucher/BROUCHER_1_mockup.png" alt="Cover Page" loading="lazy">
                 </figure>
                 <p class="project-category">Brochure mockup</p>
               </a>
@@ -763,7 +763,7 @@
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="assets/images/menu and broucher/broucher 2 FRONT-min.png" alt="Cover Page" loading="lazy">
+                  <img src="assets/images/menu and broucher/broucher 2 FRONT.png" alt="Cover Page" loading="lazy">
                 </figure>
                 <p class="project-category">Brochure front</p>
               </a>
@@ -775,7 +775,7 @@
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="assets/images/menu and broucher/broucher 2 BACK-min.png" alt="Cover Page" loading="lazy">
+                  <img src="assets/images/menu and broucher/broucher 2 BACK.png" alt="Cover Page" loading="lazy">
                 </figure>
                 <p class="project-category">Brochure back</p>
               </a>
@@ -787,7 +787,7 @@
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="assets/images/menu and broucher/broucher 2_MOCKUP-min.png" alt="Cover Page" loading="lazy">
+                  <img src="assets/images/menu and broucher/broucher 2_MOCKUP.png" alt="Cover Page" loading="lazy">
                 </figure>
                 <p class="project-category">Brochure mockup</p>
               </a>
