--- a/index.html
+++ b/index.html
@@ -650,12 +650,12 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="official designs,mockups">
-              <a href="assets/images/Advertisements/Advertisement2_mockup-min.png" data-lightbox>
+              <a href="assets/images/Advertisements/advertisement2_mockup-min.png" data-lightbox>
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="assets/images/Advertisements/Advertisement2_mockup-min.png" alt="Cover Page" loading="lazy">
+                  <img src="assets/images/Advertisements/advertisement2_mockup-min.png" alt="Cover Page" loading="lazy">
                 </figure>
                 <p class="project-category">Advertisement Design</p>
               </a>
@@ -686,108 +686,108 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="official designs">
-              <a href="assets/images/menu and broucher/menufront_back-min.png" data-lightbox>
+              <a href="assets/images/menu and broucher/menufront_back.png" data-lightbox>
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="assets/images/menu and broucher/menufront_back-min.png" alt="Cover Page" loading="lazy">
+                  <img src="assets/images/menu and broucher/menufront_back.png" alt="Cover Page" loading="lazy">
                 </figure>
                 <p class="project-category">Brochure front</p>
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="official designs">
-              <a href="assets/images/menu and broucher/menuleft_right-min.png" data-lightbox>
+              <a href="assets/images/menu and broucher/menuleft_right.png" data-lightbox>
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="assets/images/menu and broucher/menuleft_right-min.png" alt="Cover Page" loading="lazy">
+                  <img src="assets/images/menu and broucher/menuleft_right.png" alt="Cover Page" loading="lazy">
                 </figure>
                 <p class="project-category">Brochure back</p>
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="official designs,mockups">
-              <a href="assets/images/menu and broucher/MOCKIUP-min.png" data-lightbox>
+              <a href="assets/images/menu and broucher/MOCKIUP.png" data-lightbox>
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="assets/images/menu and broucher/MOCKIUP-min.png" alt="Cover Page" loading="lazy">
+                  <img src="assets/images/menu and broucher/MOCKIUP.png" alt="Cover Page" loading="lazy">
                 </figure>
                 <p class="project-category">Brochure Mockup</p>
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="official designs">
-              <a href="assets/images/menu and broucher/broucher 1 FRONT-min.png" data-lightbox>
+              <a href="assets/images/menu and broucher/broucher 1 FRONT.png" data-lightbox>
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="assets/images/menu and broucher/broucher 1 FRONT-min.png" alt="Cover Page" loading="lazy">
+                  <img src="assets/images/menu and broucher/broucher 1 FRONT.png" alt="Cover Page" loading="lazy">
                 </figure>
                 <p class="project-category">Brochure front</p>
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="official designs">
-              <a href="assets/images/menu and broucher/broucher 1 BACK-min.png" data-lightbox>
+              <a href="assets/images/menu and broucher/broucher 1 BACK.png" data-lightbox>
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="assets/images/menu and broucher/broucher 1 BACK-min.png" alt="Cover Page" loading="lazy">
+                  <img src="assets/images/menu and broucher/broucher 1 BACK.png" alt="Cover Page" loading="lazy">
                 </figure>
                 <p class="project-category">Brochure back</p>
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="official designs,mockups">
-              <a href="assets/images/menu and broucher/BROUCHER_1_mockup-min.png" data-lightbox>
+              <a href="assets/images/menu and broucher/BROUCHER_1_mockup.png" data-lightbox>
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="assets/images/menu and broucher/BROUCHER_1_mockup-min.png" alt="Cover Page" loading="lazy">
+                  <img src="assets/images/menu and broucher/BROUCHER_1_mockup.png" alt="Cover Page" loading="lazy">
                 </figure>
                 <p class="project-category">Brochure mockup</p>
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="official designs">
-              <a href="assets/images/menu and broucher/broucher 2 FRONT-min.png" data-lightbox>
+              <a href="assets/images/menu and broucher/broucher 2 FRONT.png" data-lightbox>
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="assets/images/menu and broucher/broucher 2 FRONT-min.png" alt="Cover Page" loading="lazy">
+                  <img src="assets/images/menu and broucher/broucher 2 FRONT.png" alt="Cover Page" loading="lazy">
                 </figure>
                 <p class="project-category">Brochure front</p>
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="official designs">
-              <a href="assets/images/menu and broucher/broucher 2 BACK-min.png" data-lightbox>
+              <a href="assets/images/menu and broucher/broucher 2 BACK.png" data-lightbox>
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="assets/images/menu and broucher/broucher 2 BACK-min.png" alt="Cover Page" loading="lazy">
+                  <img src="assets/images/menu and broucher/broucher 2 BACK.png" alt="Cover Page" loading="lazy">
                 </figure>
                 <p class="project-category">Brochure back</p>
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="official designs,mockups">
-              <a href="assets/images/menu and broucher/broucher 2_MOCKUP-min.png" data-lightbox>
+              <a href="assets/images/menu and broucher/broucher 2_MOCKUP.png" data-lightbox>
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="assets/images/menu and broucher/broucher 2_MOCKUP-min.png" alt="Cover Page" loading="lazy">
+                  <img src="assets/images/menu and broucher/broucher 2_MOCKUP.png" alt="Cover Page" loading="lazy">
                 </figure>
                 <p class="project-category">Brochure mockup</p>
               </a>
