--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="official designs,mockups">
+            <li class="project-item  active" data-filter-item data-category="official designs,mockups,brand collateral">
               <a href="assets/images/collatrol branding/name_)batch_mockup-min.png" data-lightbox>
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -735,13 +735,25 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="official designs,brand collateral,dmockups">
+            <li class="project-item  active" data-filter-item data-category="official designs,brand collateral,mockups">
               <a href="assets/images/collatrol branding/t-shirtmouckup-min.png" data-lightbox>
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
                   <img src="assets/images/collatrol branding/t-shirtmouckup-min.png" alt="Cover Page" loading="lazy">
+                </figure>
+                <p class="project-category">Packaging/Merchandise</p>
+              </a>
+            </li>
+
+	<li class="project-item  active" data-filter-item data-category="official designs,brand collateral,mockups">
+              <a href="assets/images/collatrol branding/ballon.png" data-lightbox>
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="assets/images/collatrol branding/ballon-min.png" alt="Cover Page" loading="lazy">
                 </figure>
                 <p class="project-category">Packaging/Merchandise</p>
               </a>
