--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
             </li>
 
 	<li class="project-item  active" data-filter-item data-category="official designs,brand collateral,mockups">
-              <a href="assets/images/collatrol branding/ballon.png" data-lightbox>
+              <a href="assets/images/collatrol branding/ballon-min.png" data-lightbox>
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
