--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <ul class="navbar-list">
 
           <li class="navbar-item">
-            <button class="navbar-link active" data-nav-link>Guideline</button>
+            <button class="navbar-link active" data-nav-link>Mood Board</button>
           </li>
 
           <li class="navbar-item">
@@ -164,10 +164,10 @@
         - #RESUME
       -->
 
-      <article class="resume active" data-page="guideline">
+      <article class="resume active" data-page="mood board">
 
         <header>
-          <h2 class="h2 article-title">Guideline</h2>
+          <h2 class="h2 article-title">Mood Board</h2>
         </header>
 
         <section class="timeline">
