--- a/index.html
+++ b/index.html
@@ -104,8 +104,11 @@
 
       <nav class="navbar">
 
-        <ul class="navbar-list">
+        <ul class="navbar-list" style="justify-content: space-around;">
 
+          <li class="navbar-item">
+            <button class="navbar-link active" data-nav-link><img src="assets/images/logos/Asset 18.png" width="100"></button>
+          </li>
           <li class="navbar-item">
             <button class="navbar-link active" data-nav-link>Mood Board</button>
           </li>
