--- a/index.html
+++ b/index.html
@@ -107,11 +107,13 @@
         <ul class="navbar-list" style="justify-content: space-around;">
 
           <li class="navbar-item">
-            <button class="navbar-link active" data-nav-link><img src="assets/images/logos/Asset 18.png" width="100"></button>
+            <a href="#"><img src="assets/images/logos/Asset 18.png" width="100" alt=""></a>
           </li>
-          <li class="navbar-item">
+			
+			<li class="navbar-item">
             <button class="navbar-link active" data-nav-link>Mood Board</button>
           </li>
+			
 
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Designs</button>
